kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flightradar-ui
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
    - hosts:
      - lucasflightradar.lab.sspcloud.fr
  rules:
  - host: lucasflightradar.lab.sspcloud.fr 
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: flightradar-ui
            port:
              number: 80
